# src/app/api/models/peripheral-dao.ts
@@ -1,6 +1,7 @@
 /* tslint:disable */
 /* eslint-disable */
 export interface PeripheralDao {
+  gatewayId?: number;
   uid?: number;
   vendor?: string;
 }
